--- a/chat/static/css/styles.css
+++ b/chat/static/css/styles.css
@@ -16,7 +16,19 @@
 
 .clickable:hover {
     cursor: pointer;
+}
+
+.clickable.menu:hover {
     color: rgb(78, 78, 255);
+}
+
+.questionSelectable {
+    padding: 7px;
+}
+
+.questionSelectable:hover {
+    border: 1px solid rgba(70, 70, 70, 0.712);
+    box-shadow: -4px 4px 6px 0px rgba(0,0,0,0.89);
 }
 
 .colorSender {
